[gd_scene load_steps=8 format=3 uid="uid://56vlexp2bh3f"]

[ext_resource type="Script" path="res://tile_board/tile_board.gd" id="1_cfvfo"]
[ext_resource type="PackedScene" uid="uid://doon4sldhry02" path="res://game/board/board_tile/board_tile.tscn" id="2_7ww23"]
[ext_resource type="Script" path="res://game/core/game_manager/game_manager.gd" id="3_ia63l"]
[ext_resource type="PackedScene" uid="uid://dorvr8hcng7ed" path="res://game/board/board_pawn/board_pawn.tscn" id="4_8nhhi"]
[ext_resource type="Script" path="res://game/board/pawn_controller/pawn_controller.gd" id="4_wpytd"]
[ext_resource type="PackedScene" uid="uid://csuni0e0oubyw" path="res://gui/dice/dice.tscn" id="5_pb4o4"]
[ext_resource type="Script" path="res://game/board/board_path/board_path.gd" id="6_uklfd"]

[node name="TestScene" type="Node2D"]

[node name="TileBoard" type="Node2D" parent="."]
script = ExtResource("1_cfvfo")

[node name="BaseTile" parent="TileBoard" instance=ExtResource("2_7ww23")]
position = Vector2(121, 112)

[node name="BaseTile2" parent="TileBoard" instance=ExtResource("2_7ww23")]
position = Vector2(280, 126)

[node name="BaseTile3" parent="TileBoard" instance=ExtResource("2_7ww23")]
position = Vector2(432, 149)

[node name="BaseTile4" parent="TileBoard" instance=ExtResource("2_7ww23")]
position = Vector2(565, 236)

[node name="BaseTile5" parent="TileBoard" instance=ExtResource("2_7ww23")]
position = Vector2(605, 364)

[node name="BaseTile6" parent="TileBoard" instance=ExtResource("2_7ww23")]
position = Vector2(546, 491)

[node name="BaseTile7" parent="TileBoard" instance=ExtResource("2_7ww23")]
position = Vector2(425, 571)

[node name="BaseTile8" parent="TileBoard" instance=ExtResource("2_7ww23")]
position = Vector2(293, 595)

[node name="BaseTile9" parent="TileBoard" instance=ExtResource("2_7ww23")]
position = Vector2(175, 647)

[node name="BaseTile10" parent="TileBoard" instance=ExtResource("2_7ww23")]
position = Vector2(139, 773)

[node name="BaseTile11" parent="TileBoard" instance=ExtResource("2_7ww23")]
position = Vector2(184, 895)

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("tile_board", "board_path", "pawn_controller")]
script = ExtResource("3_ia63l")
tile_board = NodePath("../TileBoard")
board_path = NodePath("../BoardPath")
pawn_controller = NodePath("../PawnController")

[node name="PawnController" type="Node" parent="." node_paths=PackedStringArray("board_path")]
script = ExtResource("4_wpytd")
pawn_scene = ExtResource("4_8nhhi")
board_path = NodePath("../BoardPath")

[node name="BoardPath" type="Path2D" parent="." node_paths=PackedStringArray("tile_board")]
script = ExtResource("6_uklfd")
tile_board = NodePath("../TileBoard")

[node name="TestGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Dice" parent="TestGUI" instance=ExtResource("5_pb4o4")]
layout_mode = 1
offset_left = 200.0
offset_top = 263.0
offset_right = 288.0
offset_bottom = 351.0
